package com.samsung.database;

public interface PersistentDao {
    void save();
    void search();
    void delete();
    void modify();
}
